--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
   --playfair-display: "Playfair Display", serif;
   --plus-jakarta-sans: "Plus Jakarta Sans", sans-serif;
 
-  --primary-color: #b1454a;
+  --primary-color: #9bcb76;
   --secondary-color: #121212;
 
   --black-200: #020202;
@@ -25,7 +25,7 @@
   --gray-100: #888888;
 
   --color-white: #fff;
-  --color-creamson: #fff0de;
+  --color-creamson: #fff;
 }
 
 * {
